--- a/.gitignore
+++ b/.gitignore
@@ -220,10 +220,10 @@ data/models/cerberus/*.*
 *.args.json
 
 # Ignore VS project files
-*.sln
-*.vcxproj
-*.vcxproj.filters
-*.vcxproj.user
+#*.sln
+#*.vcxproj
+#*.vcxproj.filters
+#*.vcxproj.user
 
 # Ignore macOS .DS_Store
 .DS_Store
